fix(topics/Search): use Kestra HttpClient with proper auth and order handling
Replace raw HttpURLConnection / ObjectMapper with Kestra's HttpClient,
add app-installation auth support via resolveAuthorizationHeader(),
and fix order parameter encoding in the search query builder.